Changes since labca_2_0_alpha (T.S):
    2006/4/14 (TS):
    - scilab now also uses polled 'ctrlC' handling (undocumented
      'isbrk() and inibrk()' routines.
    - changed shutdown procedure. This is still a pain and I don't
      understand exactly what needs to be done to avoid crashing
      the app on exit. Current solution seems to work on all
      platforms for both scilab and matlab.
    2006/4/11 (TS):
    - upgraded to 3.14(.8.2)-style Makefiles.
    2006/4/10 (TS):
    - ezcaEndGroupWithReport() used to clear out unconnected channels
      assuming that the disconnected state was a result of a failing
      search_and_connect(). We now clear only channels that never were
      successfully connected and leave other ones alone. This allows
      monitors to pick up seamlessly after IOC reboots.
    - disallow implicit mapping of native type -> FLOAT for monitors.
      (The old behavior let disconnected channels look for a FLOAT
      type monitor. We now let lcaNewMonitorValue() report -10 if
      asking for the native type of a disconnected channel).
    2006/2/17 (TS):
    - we now use (undocumented) MATLAB 'utHandlePendingInterrupt()' to poll
      for pending 'Ctrl-C' rather than hacking into the windows event loop.
      Our hack didn't work with matlab 7.2(?)/win32 anymore.
    2005/6/7 (TS):
	- flush output buffers (lcaPutNoWait())
Changes since labca_1_5 (T.S):
    2004/3/24 (TS):
	- EZCA modifications:
       o try to recycle work nodes marked as 'trashme'.
       o assume ca_clear_channel() does real cleanup (i.e. assume
		 it cancels scheduled callbacks) and hence recycle channel
         structures from push_channel(). Also, have push_channel()
         remove deleted channels from the hash table.
       o call clean_and_push_channel() if search attempts timeout:
         probably, the PV name is invalid and we want to prevent 3.14 
         background tasks to continue searching.