@@ -1,3 +1,8 @@
+Changes since labca_2_1_beta (T.S):
+	2006/9/1 (TS):
+	- ezcaLong is really 32bit, i.e., I fixed multiEzca.c to use 'int'
+	  instead of 'long' which is correct on 32bit and 64bit platforms.
+
 Changes since labca_2_0_alpha (T.S):
     2006/4/14 (TS):
     - scilab now also uses polled 'ctrlC' handling (undocumented
